--- a/package.json
+++ b/package.json
@@ -6,24 +6,16 @@
     "build": "vite build"
   },
   "dependencies": {
-    "@vueup/vue-quill": "^1.2.0",
-    "dayjs": "^1.10.4",
+    "@vueup/vue-quill": "1.2.0",
     "echarts": "5.1.1",
-    "element-plus": "^1.0.2-beta.42",
+    "element-plus": "1.0.2-beta.42",
     "jquery": "3.6.0",
-    "jspdf": "2.3.1",
-    "mammoth": "^1.7.1",
-    "quill-image-resize-module": "^3.0.0",
-    "screenfull": "5.1.0",
-    "tim-upload-plugin": "1.0.1",
-    "trtc-js-sdk": "4.10.2",
-    "vue": "3.0.3",
-    "vue-native-websocket-vue3": "3.1.0",
+    "vue": "3.0.9",
     "vue3-cookies": "1.0.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "1.2.1",
-    "@vue/compiler-sfc": "3.0.11",
+    "@vue/compiler-sfc": "3.0.9",
     "less": "4.1.1",
     "less-loader": "8.0.0",
     "sass": "1.32.8",
@@ -33,10 +25,6 @@
     "vue-router": "4.0.5"
   },
   "main": "vite.config.js",
-  "repository": {
-    "type": "git",
-    "url": "https://gitee.com/rexhub/proj-template-vue.git"
-  },
   "author": "",
   "license": "ISC",
   "description": ""
